--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel = "stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <video autoplay loop class="bgvideo" id="bgvideo">
+            <source src="content/video.mp4" type="video/mp4"></source>
+        </video>
     </body>
 </html>
